# FM-fouad

./: README.md
AutoEncoder/DenoisingAutoEncoder/: DenoisingAutoencoder.ipynb
CNN/: CNN_Introduction_MnistData.ipynb  README.md
Detection-With-Sound/: CMakeLists.txt  DetectionWSound.cpp
GradientDescent/: Gradient_descent.ipynb
